adding booking section for appointments along with a cta and corresponding tests

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -60,6 +60,7 @@
 
     .landing-div{
         flex-direction: column;
+        padding-bottom: 0px;
     }
     .image-container, .text-div{
         width: 80%;
