--- a/src/components/Desc/Desc.css
+++ b/src/components/Desc/Desc.css
@@ -24,7 +24,7 @@
 
 .item-link{
     padding: 12px 16px;
-    font-size: clamp(.75rem, 1.5vw, 1.5rem);
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
     background-color: var(--main-color);
     border-radius: 25px;
     color: white;
@@ -42,16 +42,39 @@
 
 .img-element{
     width: 100%;
-    height: 500px;
+    max-height: 500px;
     max-width: 900px;
 }
 
 .item-heading{
-    font-size: clamp(1.75rem ,4vw, 2.75rem);
+    font-size: clamp(1.5rem ,4vw, 2.75rem);
     font-weight: 600;
     padding-bottom: 4%;
 }
 
 .item-subtext{
     font-size: clamp(1rem, 1.75vw, 1.75rem);
+}
+
+@media(max-width: 767px){
+
+    .desc-item{
+        display: flex;
+    }
+
+    .item-image{
+        width: 90%;
+    }
+
+    .item-text{
+        width: 90%;
+    }
+
+    .desc-item{
+        margin-bottom: 10%;
+    }
+
+    .item-heading{
+        padding-bottom: 10%;
+    }
 }
