--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,11 +10,24 @@
 
 .heading-text{
     font-size: 2rem;
-    color: var(--main-color);
+}
+
+.logo-container{
+    display:flex;
+    height: 60px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.socials-container{
+    display: flex;
+    flex-direction: row;
 }
 
 .footer-heading{
     padding-right: 5%;
+    display: flex;
+    flex-direction: row;
 }
 
 .footer-about, .footer-login{
