--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,15 @@
     box-shadow: .5px 1px 3px #888888;
 }
 
+.logo{
+    width: 50px;
+    height: 50px;
+    padding: 2%;
+}
+
 .nav-title{
+    display: flex;
+    align-items: center;
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--main-color);
@@ -24,6 +32,7 @@ a{
 }
 
 .title-text{
+    color: black;
     padding-left: 15%;
 }
 
