--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,7 +1,7 @@
 @import "../../globals.css";
 
 .register-container{
-    height: 100vh;
+    min-height: calc(100vh - 65px);
     background: linear-gradient(151deg, rgba(151,53,196,1) 4%, rgba(239,214,243,1) 100%);
     display: flex;
     align-items: center;
@@ -10,12 +10,13 @@
 
 .form-container{
     background-color: white;
+    margin: 25px 0px;
     padding: 40px;
     width: 400px;
     max-width: 100vw;
 }
 
-.form-header{
+.auth-header{
     font-size: 1.5rem;
     font-weight: 600;
     display: flex;
