--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -58,7 +58,7 @@ input:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
     padding: 0px;
     margin: 0px;
