Updated title to change based on page and fixed styling issue with logout button

--- a/src/components/Dashboard/Profile/Profile.css
+++ b/src/components/Dashboard/Profile/Profile.css
@@ -24,6 +24,9 @@
     font-size: 1rem;
     font-weight: 600;
     color: #f52020;
+    background-color: white;
+    border: 0px;
+    box-shadow: 0px;
 }
 
 .logout:hover{
